starting second view, added theme switcher